cabal-version:      3.14
name:               brick-tetris
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             ls
maintainer:         liam.zhu@protonmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings

executable brick-tetris
    ghc-options: -O2 -Weverything -prof -fprof-auto -fprof-cafs -threaded +RTS -N4
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , brick ^>=2.8.2
                    , random ^>=1.3.0
                    , vty ^>=6.0
		    , vector ^>=0.13.2.0
    hs-source-dirs:   app
    default-language: GHC2024
